@@ -86,8 +86,7 @@ class Monitor:
 
             elif section.startswith('spvd:'):
                 plugin_name = section.split(':')[1]
-                if not plugin_name in self.plugins_params:
-                    self.plugins_params[plugin_name] = {}
+                self.plugins_params[plugin_name] = {}
 
                 try:
                     plugin_attrs = __import__(plugin_name)
@@ -95,29 +94,27 @@ class Monitor:
                     self.log.warning('Unkown plugin %s configuration found, skipping.' % plugin_name)
                     continue
 
-                if not plugin_name in plugins_require:
-                    try:
-                        plugins_require[plugin_name] = plugin_attrs.Plugin.require
-                    except AttributeError:
-                        self.log.error("Plugin %s doesn't provide its required configuration options" % plugin_name)
-                        self.shutdown()
+                try:
+                    plugins_require[plugin_name] = plugin_attrs.Plugin.require
+                except AttributeError:
+                    self.log.error("Plugin %s doesn't provide its required configuration options" % plugin_name)
+                    self.shutdown()
 
-                if not plugin_name in plugins_optional:
-                    plugins_optional[plugin_name] = {
-                        'distant_url' : str,
-                        'ssl_cert' : str,
-                        'ssl_key' : str,
-                        'importer_retry_timeout' : int,
-                        'max_parallel_checks' : int,
-                        'max_checks_queue' : int,
-                        'check_poll' : int,
-                        'check_timeout' : int,
-                        'result_threshold' : int,
-                        'limit_group' : str,
-                        'limit_check' : str,
-                        'limit_commit' : int,
-                        }
-                    plugins_optional[plugin_name].update(plugin_attrs.Plugin.optional)
+                plugins_optional[plugin_name] = {
+                    'distant_url' : str,
+                    'ssl_cert' : str,
+                    'ssl_key' : str,
+                    'importer_retry_timeout' : int,
+                    'max_parallel_checks' : int,
+                    'max_checks_queue' : int,
+                    'check_poll' : int,
+                    'check_timeout' : int,
+                    'result_threshold' : int,
+                    'limit_group' : str,
+                    'limit_check' : str,
+                    'limit_commit' : int,
+                    }
+                plugins_optional[plugin_name].update(plugin_attrs.Plugin.optional)
 
                 plugin_options = {}
                 for key, value in options.iteritems():
