@@ -5,6 +5,7 @@ Version 0.8.4~dev
 	* sjconf: read all [spvd:*] sections, not just [spvd].
 	* Do not provide spv-inject since it moved to webengine-spv module.
 	* Do not stop daemon on extra configuration section presence.
+	* Simplify configuration parsing code, refs: #3308.
 
 Version 0.8.3 Released on 2010/07/07
 
